--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
-
-
   },
   "dependencies": {
     "@clerk/express": "^1.7.60",
@@ -25,6 +23,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
+    "nodemailer": "^7.0.12",
     "socket.io": "^4.8.3",
     "stream-chat": "^9.27.2"
   }
